# aiJuridico

./: README.md  defense.md  main.py  pesquisa_jurisp.md  pyproject.toml  requirements.txt  setup.py  setup.sh
src/gui/: app.py
src/jurisCrew/: crews.py  defense_{topic}.md  extractorCrew.py  main.py  monitoringCrew.py  reviewCrew.py  searchCrew.py  summaryCrew.py  test.py  test_tool.py  updatingCrew.py  writingCrew.py
src/jurisCrew/config/: agents.yaml  scrape.dict  scrape.dict2  scrape.dict3  searchkeys.dict  searchkeys.txt  tasks.yaml
src/jurisCrew/tools/: monitor_test.py  rascunho.txt  scrape2.dict  scrape_test.py  scrape_tool.py
templates/: index.html  result.html
